<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_title"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_msg1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/line1"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/line1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/line2"
                android:layout_width="350dp"
                android:layout_height="5dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_name"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email_str"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_str"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/daftarBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:background="@drawable/button_shape"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/regmasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:textColor="@color/main_blue"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>