<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginVertical="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_msg"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_email_str"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"
                android:inputType="textEmailAddress"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_password_str"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"
                android:inputType="textPassword"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/masuk"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_msg"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/reg_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar"
                    android:textColor="@color/main_blue"
                    android:textAllCaps="true"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

                <TextView
                    android:id="@+id/lupa_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lupa Password ?"
                    android:textColor="@color/main_blue"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:layout_marginStart="5dp"/>

        </LinearLayout>

</RelativeLayout>