<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideActivity"
    android:background="@drawable/guide_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_title"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_1"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:text="@string/guide_2"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:text="@string/guide_3"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:text="Berikutnya"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</RelativeLayout>