<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home"
    android:background="@color/main_yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person"
                app:tint="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wellcome"
                        android:textColor="@color/black"
                        android:textSize="24dp"/>

                    <TextView
                        android:id="@+id/home_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wellcome"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_msg"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/value_frame"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/tds_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TDS"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tdsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@color/black"
                        android:textSize="36dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/ppm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PPM"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tds_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/value_frame"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/temp_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Suhu"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tempValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@color/black"
                        android:textSize="36dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/celcius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="°C"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/temp_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/value_frame">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jadwal"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginVertical="5dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>